--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,14 @@
   <img src="mine.png">
  </div>
 
+ <div class="nav">
+  <ul>
+   <li>info</li>
+   <li>work</li>
+   <li>contact</li>
+  </ul>
+ </div>
+
 
  <style>
   body {
