--- a/Index.html
+++ b/Index.html
@@ -23,15 +23,15 @@
  </div>
 
  <div class="container">
-  <div class="item _1">1</div>
-  <div class="item _2">2</div>
-  <div class="item _3">3</div>
-  <div class="item _4">4</div>
-  <div class="item _5">5</div>
-  <div class="item _6">6</div>
-  <div class="item _7">7</div>
-  <div class="item _8">8</div>
-  <div class="item _9">9</div>
+  <div class="item _1"></div>
+  <div class="item _2"></div>
+  <div class="item trex _3"></div>
+  <div class="item trex _4"></div>
+  <div class="item trex _5"></div>
+  <div class="item trex _6"></div>
+  <div class="item trex _7"></div>
+  <div class="item trex _8"></div>
+  <div class="item trex _9"></div>
 
 
 
@@ -91,15 +91,33 @@
   .container {
    margin: 0 auto;
    height: 100vh;
-   width: 60%;
+   width: 50%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(4, 1fr);
    grid-gap: 10px;
   }
 
-  .item {
-   background: burlywood;
+
+  .trex {
+   border: 6px solid bisque;
+   border-radius: 10%;
+  }
+
+  ._2 {
+   grid-column: 2/-1;
+   grid-row: span 1;
+  }
+
+  ._3 {
+   grid-column: 1/2;
+   grid-row: span 2;
+  }
+
+  ._7 {
+   grid-column: span 1;
+   grid-area: span 2;
+
   }
  </style>
 </body>
