--- a/Index.html
+++ b/Index.html
@@ -23,8 +23,13 @@
  </div>
 
  <div class="container">
-  <div class="item _1"></div>
-  <div class="item _2"></div>
+  <div class="item _1">
+   <h1>Hi there!</h1>
+  </div>
+  <div class="item _2">
+   <p>I am Adam, an aspiring software engineer based in Boston, Massachusetts.In brief, i am currently pursuing my Associate
+    in Computer Science at Middlesex Community College. </p>
+  </div>
   <div class="item trex _3"></div>
   <div class="item trex _4"></div>
   <div class="item trex _5"></div>
@@ -32,6 +37,7 @@
   <div class="item trex _7"></div>
   <div class="item trex _8"></div>
   <div class="item trex _9"></div>
+  <div class="footer"></div>
 
 
 
@@ -75,8 +81,8 @@
    display: flex;
    flex-direction: row;
    justify-content: center;
-   border-top: 1px solid black;
-   border-bottom: 1px solid black;
+   border-top: 2px solid black;
+   border-bottom: 2px solid black;
 
 
   }
@@ -95,7 +101,8 @@
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(4, 1fr);
-   grid-gap: 10px;
+   grid-gap: 20px;
+   border-top: 6px solid bisque;
   }
 
 
@@ -103,6 +110,7 @@
    border: 6px solid bisque;
    border-radius: 10%;
   }
+
 
   ._2 {
    grid-column: 2/-1;
@@ -118,6 +126,20 @@
    grid-column: span 1;
    grid-area: span 2;
 
+  }
+
+  .footer {
+   grid-column: span 3;
+   padding-top: 50px;
+   border-bottom: 2px solid black;
+  }
+
+  h1 {
+   font-size: 4em;
+  }
+
+  p {
+   font-size: 25px;
   }
  </style>
 </body>
