--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
     <div class="item trex _7"></div>
     <div class="item trex _8"></div>
     <div class="item trex _9"></div>
-    <div class="footer"></div>
+    <div class=" item footer"></div>
 
 
 
@@ -98,10 +98,10 @@
     .container {
       margin: 0 auto;
       height: 100vh;
-      width: 50%;
+      width: 60%;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: repeat(4, 1fr);
+      grid-template-columns: repeat(auto-fit, 100px);
+      grid-template-rows: repeat(4, 100px);
       grid-gap: 10px;
       border-top: 6px solid bisque;
     }
@@ -111,20 +111,6 @@
       border: 6px solid bisque;
       border-radius: 10%;
     }
-
-    ._2 {
-      grid-column: 2/-1;
-      grid-row: span 1;
-    }
-
-    ._3 {
-      grid-column: 1/2;
-      grid-row: span 2;
-    }
-
-    ._7 {
-      grid-column: span 1;
-      grid-area: span 2;
 
     }
 
@@ -170,35 +156,27 @@
         margin: 0 30px;
       }
 
-      .container {
-        width: 100%;
-        display: grid;
-        /* grid-gap: 2px;
-        grid-template-columns: repeat(auto-fit, minimax(300px, 1fr));
-        grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 1fr; */
-      }
 
 
-
-      .trex {
+      .item {
         border: 1px solid bisque;
-        grid-row: span 1;
-        grid-column: span 3;
+
+
+        h1 {
+          font-size: 2em;
+          text-align: center;
+
+        }
+
+        p {
+          font-size: 16px;
+          margin: 2px auto;
+        }
+
+
+
+
       }
-
-      h1 {
-        font-size: 2em;
-      }
-
-      p {
-        font-size: 16px;
-        margin: 2px auto;
-      }
-
-
-
-
-    }
   </style>
 </body>
 
