--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="logo">
-    <img src="mine.png">
+    <img src="mine.png" id="log">
   </div>
 
   <div class="nav">
@@ -30,27 +30,38 @@
       <p>I am Adam, an aspiring software engineer based in Boston, Massachusetts.In brief, i am currently pursuing my Associate
         in Computer Science at Middlesex Community College. </p>
     </div>
-    <div class="item trex _3"></div>
-    <div class="item trex _4"></div>
-    <div class="item trex _5"></div>
-    <div class="item trex _6"></div>
-    <div class="item trex _7"></div>
-    <div class="item trex _8"></div>
-    <div class="item trex _9"></div>
-    <div class=" item footer"></div>
-
-
-
-
-
+    <div class="item trex _3">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHLFmjKkOacDaCq3_xO7ySz3BLdsDs1Sf7njaiJZMxpi1IuKK9gQ" alt="">
+    </div>
+    <div class="item trex _4">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSxIXZfrIu6PBr9SDVcM0-P94pfz2-55oQiJKFNgW9QHVmAWIOCA" alt="">
+    </div>
+    <div class="item trex _5">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXFT5X1SvL6XRlqQ_eOe2y1AVnMDy9yMXJtDWGE5siF_i9qegrxg" alt="">
+    </div>
+    <div class="item trex _6">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuVYw9ogdvgM3pP8NZy_9jHIPa7CioIUflgrLLBdIlQkMhNVgweg" alt="">
+    </div>
+    <div class="item trex _7">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHLFmjKkOacDaCq3_xO7ySz3BLdsDs1Sf7njaiJZMxpi1IuKK9gQ" alt="">
+    </div>
+    <div class="item trex _8">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuVYw9ogdvgM3pP8NZy_9jHIPa7CioIUflgrLLBdIlQkMhNVgweg" alt="">
+    </div>
+    <div class="item trex _9">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSxIXZfrIu6PBr9SDVcM0-P94pfz2-55oQiJKFNgW9QHVmAWIOCA" alt="">
+    </div>
   </div>
-
+  <div class=" item footer">
+    <p>Designed by Adam</p>
+  </div>
 
   <style>
     body {
       margin: 20px auto;
       background: #FFFFF4;
       font-family: 'Dosis', sans-serif;
+      text-align: center;
 
 
     }
@@ -63,7 +74,7 @@
 
     }
 
-    img {
+    #log {
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -97,27 +108,46 @@
 
     .container {
       margin: 0 auto;
-      height: 100vh;
+      /* height: 100vh; */
       width: 60%;
       display: grid;
-      grid-template-columns: repeat(auto-fit, 100px);
-      grid-template-rows: repeat(4, 100px);
+      grid-template-columns: repeat(auto-fit, 300px);
+      grid-template-rows: repeat(4, 300px);
       grid-gap: 10px;
-      border-top: 6px solid bisque;
+      border-top: 4px solid bisque;
+      padding: 10px;
+      justify-content: center;
     }
 
 
     .trex {
-      border: 6px solid bisque;
+      border: 4px solid bisque;
       border-radius: 10%;
     }
 
+    ._2 {
+      grid-column: 2/-1;
+    }
+
+    ._4 {
+      grid-column: 3/-1;
+      grid-row: 3/5;
+    }
+
+    ._3 {
+      grid-column: 1/2;
+      grid-row: 2/4;
     }
 
     .footer {
-      grid-column: span 3;
-      padding-top: 50px;
-      border-bottom: 2px solid black;
+      padding-top: 30px;
+
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
     }
 
     h1 {
@@ -146,21 +176,84 @@
       }
 
       .nav {
-        width: 80%;
+        width: 100%;
         margin: 10px auto;
         padding: 0;
-
       }
 
       li {
         margin: 0 30px;
       }
 
+      .container {
+        grid-template-columns: repeat(1fr, 300px);
+        grid-template-rows: repeat(auto-fit, 300px);
+      }
+
+
 
 
       .item {
         border: 1px solid bisque;
+        grid-column: span 3;
+        grid-row: span l;
+      }
 
+      ._1 {
+        height: 100px;
+      }
+
+      h1 {
+        font-size: 2em;
+        text-align: center;
+
+      }
+
+      p {
+        font-size: 16px;
+        margin: 2px auto;
+      }
+
+
+      @media screen and (max-width: 768px) {
+
+        body {
+          margin: 0 auto;
+        }
+
+        .logo {
+          margin-bottom: 20px;
+          width: 100px;
+          height: 100px;
+        }
+
+        .nav {
+          width: 100%;
+          margin: 10px auto;
+          padding: 0;
+        }
+
+        li {
+          margin: 0 30px;
+        }
+
+        .container {
+          grid-template-columns: repeat(1fr, 300px);
+          grid-template-rows: repeat(auto-fit, 300px);
+        }
+
+
+
+
+        .item {
+          border: 1px solid bisque;
+          grid-column: span 3;
+          grid-row: span l;
+        }
+
+        ._1 {
+          height: 100px;
+        }
 
         h1 {
           font-size: 2em;
@@ -172,6 +265,9 @@
           font-size: 16px;
           margin: 2px auto;
         }
+
+
+
 
 
 
