more responsive styling

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,9 @@
     </div>
     <div class="item _2">
       <p>I am Adam, an aspiring software engineer based in Boston, Massachusetts.In brief, i am currently pursuing my Associate
-        in Computer Science at Middlesex Community College. </p>
+        in Computer Science at Middlesex Community College.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur assumenda a inventore fugit esse vel, optio nemo
+        minima autem sunt vero perferendis, tenetur neque quaerat suscipit deserunt culpa quia voluptatem. </p>
     </div>
     <div class="item trex _3">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHLFmjKkOacDaCq3_xO7ySz3BLdsDs1Sf7njaiJZMxpi1IuKK9gQ" alt="">
@@ -52,7 +54,7 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSxIXZfrIu6PBr9SDVcM0-P94pfz2-55oQiJKFNgW9QHVmAWIOCA" alt="">
     </div>
   </div>
-  <div class=" item footer">
+  <div class="footer">
     <p>Designed by Adam</p>
   </div>
 
@@ -61,7 +63,7 @@
       margin: 20px auto;
       background: #FFFFF4;
       font-family: 'Dosis', sans-serif;
-      text-align: center;
+
 
 
     }
@@ -108,7 +110,6 @@
 
     .container {
       margin: 0 auto;
-      /* height: 100vh; */
       width: 60%;
       display: grid;
       grid-template-columns: repeat(auto-fit, 300px);
@@ -121,8 +122,8 @@
 
 
     .trex {
-      border: 4px solid bisque;
-      border-radius: 10%;
+      border: 2px solid bisque;
+
     }
 
     ._2 {
@@ -156,6 +157,9 @@
 
     p {
       font-size: 16px;
+      margin: 10px;
+      line-height: 2em;
+      text-align: center;
     }
 
 
@@ -188,6 +192,8 @@
       .container {
         grid-template-columns: repeat(1fr, 300px);
         grid-template-rows: repeat(auto-fit, 300px);
+        width: 100%;
+        grid-gap: 5px;
       }
 
 
@@ -200,7 +206,7 @@
       }
 
       ._1 {
-        height: 100px;
+        height: 300px;
       }
 
       h1 {
