--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,6 @@
       font-family: 'Dosis', sans-serif;
 
 
-
     }
 
     .logo {
@@ -167,7 +166,7 @@
 
     /* mobile styles */
 
-    @media screen and (max-width: 480px) {
+    @media all and (max-width: 480px) {
 
       body {
         margin: 0 auto;
@@ -205,9 +204,7 @@
         grid-row: span l;
       }
 
-      ._1 {
-        height: 300px;
-      }
+      ._1 {}
 
       h1 {
         font-size: 2em;
@@ -221,7 +218,8 @@
       }
 
 
-      @media screen and (max-width: 768px) {
+      /* tablet styles */
+      @media all and (max-width: 768px) {
 
         body {
           margin: 0 auto;
@@ -234,7 +232,6 @@
         }
 
         .nav {
-          width: 100%;
           margin: 10px auto;
           padding: 0;
         }
@@ -246,6 +243,8 @@
         .container {
           grid-template-columns: repeat(1fr, 300px);
           grid-template-rows: repeat(auto-fit, 300px);
+          width: 100%;
+          grid-gap: 5px;
         }
 
 
@@ -253,12 +252,8 @@
 
         .item {
           border: 1px solid bisque;
-          grid-column: span 3;
-          grid-row: span l;
-        }
-
-        ._1 {
-          height: 100px;
+          grid-column: span 4;
+          grid-row: span 2;
         }
 
         h1 {
@@ -272,13 +267,62 @@
           margin: 2px auto;
         }
 
+        @media screen and (max-width: 768px) {
+
+          body {
+            margin: 0 auto;
+          }
+
+          .logo {
+            margin-bottom: 20px;
+            width: 100px;
+            height: 100px;
+          }
+
+          .nav {
+            width: 100%;
+            margin: 10px auto;
+            padding: 0;
+          }
+
+          li {
+            margin: 0 30px;
+          }
+
+          .container {
+            grid-template-columns: repeat(1fr, 300px);
+            grid-template-rows: repeat(auto-fit, 300px);
+          }
+
+
+
+
+          .item {
+            border: 1px solid bisque;
+            grid-column: span 3;
+            grid-row: span l;
+          }
+
+          h1 {
+            font-size: 2em;
+            text-align: center;
+
+          }
+
+          p {
+            font-size: 16px;
+            margin: 2px auto;
+          }
 
 
 
 
 
 
-      }
+
+
+
+        }
   </style>
 </body>
 
