--- a/Index.html
+++ b/Index.html
@@ -241,14 +241,10 @@
         }
 
         .container {
-          grid-template-columns: repeat(1fr, 300px);
-          grid-template-rows: repeat(auto-fit, 300px);
+          grid-template-rows: repeat(10, 300px);
           width: 100%;
           grid-gap: 5px;
         }
-
-
-
 
         .item {
           border: 1px solid bisque;
@@ -256,73 +252,16 @@
           grid-row: span 2;
         }
 
-        h1 {
-          font-size: 2em;
-          text-align: center;
-
-        }
-
-        p {
-          font-size: 16px;
-          margin: 2px auto;
-        }
-
-        @media screen and (max-width: 768px) {
-
-          body {
-            margin: 0 auto;
-          }
-
-          .logo {
-            margin-bottom: 20px;
-            width: 100px;
-            height: 100px;
-          }
-
-          .nav {
-            width: 100%;
-            margin: 10px auto;
-            padding: 0;
-          }
-
-          li {
-            margin: 0 30px;
-          }
-
-          .container {
-            grid-template-columns: repeat(1fr, 300px);
-            grid-template-rows: repeat(auto-fit, 300px);
-          }
 
 
-
-
-          .item {
-            border: 1px solid bisque;
-            grid-column: span 3;
-            grid-row: span l;
-          }
-
-          h1 {
-            font-size: 2em;
-            text-align: center;
-
-          }
-
-          p {
-            font-size: 16px;
-            margin: 2px auto;
-          }
+      }
 
 
 
 
 
 
-
-
-
-        }
+    }
   </style>
 </body>
 
