--- a/Index.html
+++ b/Index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
-  <div class="logo">
-    <img src="mine.png" id="log">
-  </div>
-
-  <div class="nav">
-
-    <li>info</li>
-    <li>work</li>
-    <li>contact</li>
-
-  </div>
 
   <div class="container">
+    <div class="logo">
+      <img src="mine.png" id="log">
+    </div>
+
+    <div class="nav">
+
+      <li>info</li>
+      <li>work</li>
+      <li>contact</li>
+
+    </div>
+
     <div class="item _1">
       <h1>Hi there!</h1>
     </div>
@@ -68,6 +69,7 @@
     }
 
     .logo {
+      grid-column: 1/-1;
       margin: 0 auto;
       width: 150px;
       height: 150px;
