--- a/Index.html
+++ b/Index.html
@@ -89,6 +89,8 @@
 
 
     .nav {
+      grid-column: 1/-1;
+      grid-row: 2/3;
       width: 50%;
       margin: 50px auto;
       padding: 20px 100px;
@@ -114,7 +116,7 @@
       width: 60%;
       display: grid;
       grid-template-columns: repeat(auto-fit, 300px);
-      grid-template-rows: repeat(4, 300px);
+      grid-template-rows: repeat(6, 300px);
       grid-gap: 10px;
       border-top: 4px solid bisque;
       padding: 10px;
@@ -127,8 +129,15 @@
 
     }
 
+    ._1 {
+      grid-column: 1/2;
+      grid-row: 3/4;
+    }
+
     ._2 {
       grid-column: 2/-1;
+      grid-row: 3/4;
+
     }
 
     ._4 {
@@ -138,7 +147,11 @@
 
     ._3 {
       grid-column: 1/2;
-      grid-row: 2/4;
+      grid-row: 4/6;
+    }
+
+    ._4 {
+      grid-row: 5/-1;
     }
 
     .footer {
