--- a/Index.html
+++ b/Index.html
@@ -4,280 +4,29 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Index</title>
+  <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <script src="main.js"></script>
 </head>
 
 <body>
+  <div class="container1">
+    <div class="nav"></div>
+    <div class="intro"></div>
+    <div class="item1"></div>
+    <div class="item2"></div>
+    <div class="item3"></div>
+    <div class="footer"></div>
 
-  <div class="container">
-    <div class="logo">
-      <img src="mine.png" id="log">
-    </div>
-
-    <div class="nav">
-
-      <li>info</li>
-      <li>work</li>
-      <li>contact</li>
-
-    </div>
-
-    <div class="item _1">
-      <h1>Hi there!</h1>
-    </div>
-    <div class="item _2">
-      <p>I am Adam, an aspiring software engineer based in Boston, Massachusetts.In brief, i am currently pursuing my Associate
-        in Computer Science at Middlesex Community College.</p>
-      <p>Lorem, dolor sit amet consectetur adipisicing elit. Consectetur assumenda a inventore fugit esse vel, optio nemo minima
-        autem sunt vero perferendis, tenetur neque quaerat suscipit deserunt culpa quia voluptatem. </p>
-    </div>
-    <div class="item trex _3">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHLFmjKkOacDaCq3_xO7ySz3BLdsDs1Sf7njaiJZMxpi1IuKK9gQ" alt="">
-    </div>
-    <div class="item trex _4">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSxIXZfrIu6PBr9SDVcM0-P94pfz2-55oQiJKFNgW9QHVmAWIOCA" alt="">
-    </div>
-    <div class="item trex _5">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXFT5X1SvL6XRlqQ_eOe2y1AVnMDy9yMXJtDWGE5siF_i9qegrxg" alt="">
-    </div>
-    <div class="item trex _6">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuVYw9ogdvgM3pP8NZy_9jHIPa7CioIUflgrLLBdIlQkMhNVgweg" alt="">
-    </div>
-    <div class="item trex _7">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHLFmjKkOacDaCq3_xO7ySz3BLdsDs1Sf7njaiJZMxpi1IuKK9gQ" alt="">
-    </div>
-    <div class="item trex _8">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuVYw9ogdvgM3pP8NZy_9jHIPa7CioIUflgrLLBdIlQkMhNVgweg" alt="">
-    </div>
-    <div class="item trex _9">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSxIXZfrIu6PBr9SDVcM0-P94pfz2-55oQiJKFNgW9QHVmAWIOCA" alt="">
-    </div>
-  </div>
-  <div class="footer">
-    <p>Designed by Adam</p>
   </div>
 
-  <style>
-    body {
-      margin: 20px auto;
-      background: #FFFFF4;
-      font-family: 'Dosis', sans-serif;
-
-
-    }
-
-    .logo {
-      grid-column: 1/-1;
-      margin: 0 auto;
-      width: 150px;
-      height: 150px;
-
-
-    }
-
-    #log {
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-      border: 2px solid bisque;
-      border-radius: 30%;
-
-    }
-
-
-
-    .nav {
-      grid-column: 1/-1;
-      grid-row: 2/3;
-      width: 50%;
-      margin: 50px auto;
-      padding: 20px 100px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      border-top: 2px solid black;
-      border-bottom: 2px solid black;
-
-
-    }
-
-    li {
-      list-style-type: none;
-      font-size: 25px;
-      margin: 0 50px;
-
-    }
-
-    .container {
-      margin: 0 auto;
-      width: 60%;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, 300px);
-      grid-template-rows: repeat(6, 300px);
-      grid-gap: 10px;
-      border-top: 4px solid bisque;
-      padding: 10px;
-      justify-content: center;
-    }
-
-
-    .trex {
-      border: 2px solid bisque;
-
-    }
-
-    ._1 {
-      grid-column: 1/2;
-      grid-row: 3/4;
-    }
-
-    ._2 {
-      grid-column: 2/-1;
-      grid-row: 3/4;
-
-    }
-
-    ._4 {
-      grid-column: 3/-1;
-      grid-row: 3/5;
-    }
-
-    ._3 {
-      grid-column: 1/2;
-      grid-row: 4/6;
-    }
-
-    ._4 {
-      grid-row: 5/-1;
-    }
-
-    .footer {
-      padding-top: 30px;
-
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-
-    h1 {
-      font-size: 3em;
-    }
-
-    p {
-      font-size: 16px;
-      margin: 10px;
-      line-height: 2em;
-      text-align: center;
-    }
-
-
-    /* Media Queries */
-
-    /* mobile styles */
-
-    @media all and (max-width: 480px) {
-
-      body {
-        margin: 0 auto;
-      }
-
-      .logo {
-        margin-bottom: 20px;
-        width: 100px;
-        height: 100px;
-      }
-
-      .nav {
-        width: 100%;
-        margin: 10px auto;
-        padding: 0;
-      }
-
-      li {
-        margin: 0 30px;
-      }
-
-      .container {
-        grid-template-columns: repeat(1fr, 300px);
-        grid-template-rows: repeat(auto-fit, 300px);
-        width: 100%;
-        grid-gap: 5px;
-      }
-
-
-
-
-      .item {
-        border: 1px solid bisque;
-        grid-column: span 3;
-        grid-row: span l;
-      }
-
-      ._1 {}
-
-      h1 {
-        font-size: 2em;
-        text-align: center;
-
-      }
-
-      p {
-        font-size: 16px;
-        margin: 2px auto;
-      }
-
-
-      /* tablet styles */
-      @media all and (max-width: 768px) {
-
-        body {
-          margin: 0 auto;
-        }
-
-        .logo {
-          margin-bottom: 20px;
-          width: 100px;
-          height: 100px;
-        }
-
-        .nav {
-          margin: 10px auto;
-          padding: 0;
-        }
-
-        li {
-          margin: 0 30px;
-        }
-
-        .container {
-          grid-template-rows: repeat(10, 300px);
-          width: 100%;
-          grid-gap: 5px;
-        }
-
-        .item {
-          border: 1px solid bisque;
-          grid-column: span 4;
-          grid-row: span 2;
-        }
-
-
-
-      }
-
-
-
-
-
-
-    }
-  </style>
 </body>
+
+<style>
+  * {
+    box-sizing: border-box;
+  }
+</style>
 
 </html>
