--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="main.js"></script>
@@ -12,12 +12,12 @@
 
 <body>
   <div class="container1">
-    <div class="nav"></div>
-    <div class="intro"></div>
-    <div class="item1"></div>
-    <div class="item2"></div>
-    <div class="item3"></div>
-    <div class="footer"></div>
+    <div class=" box nav"></div>
+    <div class=" box intro"></div>
+    <div class=" box item1"></div>
+    <div class=" box item2"></div>
+    <div class=" box item3"></div>
+    <div class=" box footer"></div>
 
   </div>
 
@@ -26,6 +26,20 @@
 <style>
   * {
     box-sizing: border-box;
+  }
+
+  .container1 {
+    margin: 0 auto;
+    display: grid;
+    width: 70%;
+    height: 100vh;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 50px 500px 200px 200px 200px 50px;
+    grid-gap: 20px;
+  }
+
+  .box {
+    background-color: black;
   }
 </style>
 
