--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
   .container1 {
     margin: 0 auto;
     display: grid;
-    width: 70%;
+    width: 60%;
     height: 100vh;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 50px 500px 200px 200px 200px 50px;
@@ -40,6 +40,34 @@
 
   .box {
     background-color: black;
+  }
+
+  /* nav styles */
+
+  .nav {
+    grid-column: 1/-1;
+  }
+
+  .intro {
+    grid-column: 1/3;
+  }
+
+  .item1 {
+    grid-column: 3/-1;
+  }
+
+  .item2 {
+    grid-column: 2/4;
+    grid-row: 3/5;
+  }
+
+  .item3 {
+    grid-column: 4/-1;
+    grid-row: 4/6;
+  }
+
+  .footer {
+    grid-column: 1/-1;
   }
 </style>
 
