--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,30 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>index</title>
+  <title>Index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 </head>
 
 <body>
-  <div class="container1">
-    <div class=" box nav"></div>
-    <div class=" box intro"></div>
-    <div class=" box item1"></div>
-    <div class=" box item2"></div>
-    <div class=" box item3"></div>
-    <div class=" box footer"></div>
-
+  <div class="wrapper">
+    <div class=" header box">
+      <div class="navigation">
+        <a class="nav" href="https://www.google.com/">About</a>
+        <a class="nav" href="https://www.google.com/">Work</a>
+        <a class="nav" href="https://www.google.com/">Contact</a>
+      </div>
+      <div class="intro">
+        <h1>Hi,
+          <br>I'm Adam,
+          <br>Web Developer.</h1>
+      </div>
+    </div>
+    <div class=" about box"></div>
+    <div class=" about box"></div>
+    <div class=" contact box"></div>
   </div>
 
 </body>
@@ -28,46 +37,54 @@
     box-sizing: border-box;
   }
 
-  .container1 {
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .wrapper {
     margin: 0 auto;
     display: grid;
-    width: 60%;
-    height: 100vh;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 50px 500px 200px 200px 200px 50px;
-    grid-gap: 20px;
+    grid-template-rows: 1000px 500px 1000px 500px;
+    grid-gap: 50px;
   }
 
   .box {
     background-color: black;
   }
 
-  /* nav styles */
+  /* header styles */
+
+  .header {
+    display: grid;
+    grid-template-columns: repeat(3 1fr);
+    grid-template-rows: 50px 350px 500px;
+    grid-gap: 50px;
+  }
+
+  .navigation {
+    display: flex;
+    grid-column: span 3;
+    grid-row: 1/2;
+    justify-content: flex-end;
+    margin: 0 30px;
+  }
 
   .nav {
-    grid-column: 1/-1;
+    font-size: 25px;
+    margin: 10px;
+    text-decoration: none;
+    color: #EEE8AA;
   }
 
   .intro {
-    grid-column: 1/3;
+    margin: 0 40px;
+    grid-column: span 3;
+    grid-row: 3/4;
   }
 
-  .item1 {
-    grid-column: 3/-1;
-  }
-
-  .item2 {
-    grid-column: 2/4;
-    grid-row: 3/5;
-  }
-
-  .item3 {
-    grid-column: 4/-1;
-    grid-row: 4/6;
-  }
-
-  .footer {
-    grid-column: 1/-1;
+  h1 {
+    color: #EEE8AA;
+    font-size: 4em;
   }
 </style>
 
