--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,18 @@
           <br>Web Developer.</h1>
       </div>
     </div>
-    <div class=" about box"></div>
+    <div class=" about box">
+      <h2>About Me</h2>
+      <p>I am Adam Mulorem (just call me Adam), Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem eum iste sequi
+        animi sit facilis commodi dolores, deleniti nihil. Voluptates, ipsum accusamus? Id error eius.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente animi suscipit unde ut assumenda asperiores, ipsa
+        id non inventore aperiam, minima, itaque doloremque vel veritatis illo quidem expedita odio? Blanditiis. Lorem ipsum
+        dolor sit amet consectetur. </p>
+
+      <p> Currently open to any exciting freelance and collaborative opportunities, I am willing for new challenges, new positions
+        as well as looking for opportunities to work in different foreign countries to see the other side of the world.</p>
+    </div>
     <div class=" about box"></div>
     <div class=" contact box"></div>
   </div>
@@ -39,6 +50,7 @@
 
   body {
     font-family: 'Roboto', sans-serif;
+    color: rgb(180, 174, 106);
   }
 
   .wrapper {
@@ -73,7 +85,6 @@
     font-size: 25px;
     margin: 10px;
     text-decoration: none;
-    color: #EEE8AA;
   }
 
   .intro {
@@ -83,7 +94,7 @@
   }
 
   h1 {
-    color: #EEE8AA;
+
     font-size: 4em;
   }
 </style>
