--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,7 @@
           as well as looking for opportunities to work in different foreign countries to see the other side of the world.</p>
       </div>
       <div class="skills">
+        <h2>Skills</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, laborum possimus, ullam distinctio aspernatur autem
           iste obcaecati expedita incidunt ipsum quod ea. Ratione sunt reiciendis illum nobis magnam est enim.
@@ -110,7 +111,8 @@
 
   .about {
     display: grid;
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 20px;
   }
 
   .me {
