--- a/Index.html
+++ b/Index.html
@@ -39,14 +39,23 @@
           as well as looking for opportunities to work in different foreign countries to see the other side of the world.</p>
       </div>
       <div class="skills">
-        <h2>Skills</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, laborum possimus, ullam distinctio aspernatur autem
-          iste obcaecati expedita incidunt ipsum quod ea. Ratione sunt reiciendis illum nobis magnam est enim.
-        </p>
+        <h2>What I do</h2>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+        </ul>
       </div>
     </div>
-    <div class=" about box"></div>
+    <div class=" project box">
+      <div class=" trex indulge"></div>
+      <div class=" trex project2"></div>
+      <div class=" trex project3"></div>
+      <div class=" trex templates"></div>
+      <div class=" trex more"></div>
+      <div class=" trex more1"></div>
+      <div class=" trex more2"></div>
+
+    </div>
     <div class=" contact box"></div>
   </div>
 
@@ -60,24 +69,23 @@
   body {
     font-family: 'Roboto', sans-serif;
     color: rgb(180, 174, 106);
+    background-color: black;
   }
 
   .wrapper {
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 1000px 500px 1000px 500px;
-    grid-gap: 50px;
+    grid-template-rows: 950px 500px 950px 500px;
+    grid-gap: 10px;
+
   }
 
-  .box {
-    background-color: black;
-  }
 
   /* header styles */
 
   .header {
     display: grid;
-    grid-template-columns: repeat(3 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 50px 350px 500px;
     grid-gap: 50px;
   }
@@ -94,6 +102,11 @@
     font-size: 25px;
     margin: 10px;
     text-decoration: none;
+    color: rgb(180, 174, 106);
+
+
+
+
   }
 
   .intro {
@@ -126,6 +139,49 @@
   p {
     line-height: 2em;
     font-size: 1em;
+  }
+
+  /* Project styles */
+
+  .project {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 20px;
+    width: 80%;
+
+  }
+
+  .trex {
+    background-color: antiquewhite;
+    border: 1px solid gray;
+    border-radius: 10%;
+  }
+
+  .indulge {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+
+  .project2 {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
+
+  .templates {
+    grid-column: 4/-1;
+    grid-row: 2/4;
+  }
+
+  .more {
+    grid-column: 1/2;
+    grid-row: 3/-1;
+  }
+
+  .more1 {
+    grid-column: 2/4;
+    grid-row: 3/-1;
   }
 </style>
 
