--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
   <div class="wrapper">
     <div class=" header box">
       <div class="navigation">
-        <a class="nav" href="https://www.google.com/">About</a>
-        <a class="nav" href="https://www.google.com/">Work</a>
-        <a class="nav" href="https://www.google.com/">Contact</a>
+        <a class="nav" href="#about">About</a>
+        <a class="nav" href="#work">Work</a>
+        <a class="nav" href="#contact">Contact</a>
       </div>
       <div class="intro">
         <h1>Hi,
@@ -26,6 +26,7 @@
       </div>
     </div>
     <div class=" about box">
+      <a name="about"></a>
       <div class="me">
         <h2>About Me</h2>
         <p>I am Adam Mulorem (just call me Adam), Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem eum iste
@@ -46,7 +47,8 @@
         </ul>
       </div>
     </div>
-    <div class=" project box">
+    <div class=" work box">
+      <a name="work"></a>
       <div class=" trex indulge"></div>
       <div class=" trex project2"></div>
       <div class=" trex project3"></div>
@@ -56,7 +58,10 @@
       <div class=" trex more2"></div>
 
     </div>
-    <div class=" contact box"></div>
+    <div class="contact box">
+      <a name="contact"></a>
+
+    </div>
   </div>
 
 </body>
@@ -143,7 +148,7 @@
 
   /* Project styles */
 
-  .project {
+  .work {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
