--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,6 @@
       </div>
     </div>
     <div class=" work box">
-      <a name="work"></a>
       <div class=" trex indulge"></div>
       <div class=" trex project2"></div>
       <div class=" trex project3"></div>
@@ -60,6 +59,24 @@
     </div>
     <div class="contact box">
       <a name="contact"></a>
+
+      <div class="details">
+        <h2>Contact Me</h2>
+        <ul>
+          <li>Phone: +1-000-0000000</li>
+          <li>E-mail: loremipsum@ipsum.com</li>
+        </ul>
+
+        <h3>Check out more projects on
+          <a href="https://github.com/AMutaa">Github</a>
+        </h3>
+      </div>
+
+      <div class="quote">
+        <h2>"Lorem ipsum dolor eleniti nihil. Voluptates ipsum accusamus Id error eius"</h2>
+      </div>
+
+      <div class="credits">Adam ipsum 2018</div>
 
     </div>
   </div>
@@ -80,8 +97,9 @@
   .wrapper {
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 950px 500px 950px 500px;
+    grid-template-rows: 950px 500px 950px 300px;
     grid-gap: 10px;
+    width: 80%;
 
   }
 
@@ -108,9 +126,6 @@
     margin: 10px;
     text-decoration: none;
     color: rgb(180, 174, 106);
-
-
-
 
   }
 
@@ -149,12 +164,10 @@
   /* Project styles */
 
   .work {
-    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 20px;
-    width: 80%;
 
   }
 
@@ -187,6 +200,31 @@
   .more1 {
     grid-column: 2/4;
     grid-row: 3/-1;
+  }
+
+  /* Contact Styles */
+
+  .contact {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 200px 10px;
+    grid-gap: 10px;
+    margin: 50px 0;
+  }
+
+  .details {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .quote {
+    grid-column: 2/-1;
+    grid-row: 1/2;
+  }
+
+  .credits {
+    grid-column: span 2;
+    text-align: center;
   }
 </style>
 
