--- a/Index.html
+++ b/Index.html
@@ -172,34 +172,50 @@
   }
 
   .trex {
-    background-color: antiquewhite;
     border: 1px solid gray;
-    border-radius: 10%;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+
   }
 
   .indulge {
     grid-column: 1/3;
     grid-row: 1/3;
+    background-image: url(images/rsz_indulge.jpg);
+
   }
 
   .project2 {
     grid-column: 3/4;
     grid-row: 1/3;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
   }
 
   .templates {
     grid-column: 4/-1;
     grid-row: 2/4;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
   }
 
   .more {
     grid-column: 1/2;
     grid-row: 3/-1;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
   }
 
   .more1 {
     grid-column: 2/4;
     grid-row: 3/-1;
+    background-image: url(images/rsz_indulge.jpg);
+  }
+
+  .project3 {
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  }
+
+  .more2 {
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
   }
 
   /* Contact Styles */
