--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
 
 </head>
 
@@ -79,7 +81,8 @@
         <h2>"Lorem ipsum dolor eleniti nihil. Voluptates ipsum accusamus Id error eius"</h2>
       </div>
 
-      <div class="credits">Adam ipsum 2018</div>
+      <div class="credits">
+        <i class="far fa-copyright fa-spin"></i>Designed By Adam 2018</div>
 
     </div>
   </div>
@@ -228,6 +231,7 @@
 
   img {
     float: left;
+    margin: 0 10px;
   }
 
   li {
