--- a/Index.html
+++ b/Index.html
@@ -105,7 +105,7 @@
     display: grid;
     grid-template-rows: 950px 500px 950px 300px;
     grid-gap: 10px;
-    width: 80%;
+    width: 80vw;
 
   }
 
@@ -120,9 +120,13 @@
   }
 
   .navigation {
+    width: 80vw;
     grid-column: span 3;
     grid-row: 1/2;
-    margin: 0 30px;
+    overflow: hidden;
+    position: fixed;
+    background-color: black;
+    opacity: 0.8;
   }
 
   .nav {
@@ -135,7 +139,6 @@
   }
 
   .intro {
-    margin: 0 40px;
     grid-column: span 3;
     grid-row: 3/4;
   }
@@ -231,7 +234,6 @@
 
   img {
     float: left;
-    margin: 0 10px;
   }
 
   li {
