--- a/Index.html
+++ b/Index.html
@@ -50,13 +50,17 @@
           <li>HTML5</li>
           <li>CSS3</li>
         </ul>
+
       </div>
     </div>
     <div class=" work box">
       <div class=" trex indulge"></div>
       <div class=" trex project2"></div>
       <div class=" trex project3"></div>
-      <div class=" trex templates"></div>
+      <div class=" trex templates">
+        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" width="321" height="465" frameborder="0" allowtransparency="true"
+          allow="encrypted-media"></iframe>
+      </div>
       <div class=" trex more"></div>
       <div class=" trex more1"></div>
       <div class=" trex more2"></div>
@@ -208,7 +212,7 @@
   .templates {
     grid-column: 4/-1;
     grid-row: 2/4;
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+
   }
 
   .more {
