--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="quote">
-        <h2>"Lorem ipsum dolor eleniti nihil. Voluptates ipsum accusamus Id error eius"</h2>
+        <h2>"The Illiterates of today are the ones who unlearn what they've learned"</h2>
       </div>
 
       <div class="credits">
@@ -189,7 +189,6 @@
   }
 
   .trex {
-    border: 1px solid gray;
     background-size: cover;
     background-repeat: no-repeat;
 
