--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css">
+  <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css"> z
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
@@ -148,7 +148,7 @@
   .intro {
     grid-column: span 3;
     grid-row: 3/4;
-    background-image: url(https://images.pexels.com/photos/37727/pexels-photo-37727.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+
   }
 
   h1 {
