--- a/Index.html
+++ b/Index.html
@@ -42,9 +42,6 @@
           id non inventore aperiam, minima, itaque doloremque vel veritatis illo quidem expedita odio? Blanditiis. Lorem
           ipsum dolor sit amet consectetur. </p>
 
-        <p> Currently open to any exciting freelance and collaborative opportunities, Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Labore ipsam architecto ducimus, nesciunt eveniet amet, nemo dolorem, cum doloremque laborum
-          ratione aliquid? Ex corporis laborum sit architecto incidunt voluptatibus officia.</p>
       </div>
       <div class="skills">
         <h2>What I do</h2>
@@ -52,7 +49,10 @@
           <li>HTML5</li>
           <li>CSS3</li>
         </ul>
-
+      </div>
+      <div class="other">
+        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" width="321" height="465" frameborder="0" allowtransparency="true"
+          allow="encrypted-media"></iframe>
       </div>
     </div>
     <div class=" work box">
@@ -60,8 +60,7 @@
       <div class=" trex project2"></div>
       <div class=" trex project3"></div>
       <div class=" trex templates">
-        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" width="321" height="465" frameborder="0" allowtransparency="true"
-          allow="encrypted-media"></iframe>
+
       </div>
       <div class=" trex more"></div>
       <div class=" trex more1"></div>
@@ -165,17 +164,22 @@
 
   .about {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     padding: 0 20px;
   }
 
   .me {
-    grid-column: 1/2;
+    grid-column: 1/3;
   }
 
   .skills {
-    grid-column: 2/-1;
+    grid-column: 3/4;
   }
+
+  .other {
+    grid-column: 4/-1;
+  }
+
 
   p {
     line-height: 2em;
