--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css"> z
+  <link rel="stylesheet" href="/Users/piusandru/Desktop/CODE/portefeuille/normalise.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
@@ -51,8 +51,7 @@
         </ul>
       </div>
       <div class="other">
-        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" width="321" height="465" frameborder="0" allowtransparency="true"
-          allow="encrypted-media"></iframe>
+        <h2>More Jazz</h2>
       </div>
     </div>
     <div class=" work box">
@@ -66,6 +65,13 @@
       <div class=" trex more1"></div>
       <div class=" trex more2"></div>
 
+    </div>
+    <div class="blog">
+      <div class="articles"></div>
+      <div class="music">
+        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" float="right" width="378" height="500" frameborder="0"
+          allowtransparency="true" allow="encrypted-media">Selectore</iframe>
+      </div>
     </div>
     <div class="contact box">
       <a name="contact"></a>
@@ -103,15 +109,15 @@
   body {
     font-family: 'Quicksand', sans-serif;
     color: rgb(180, 174, 106);
-    background-color: black;
+    background: black;
   }
 
   .wrapper {
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 950px 500px 950px 300px;
-    grid-gap: 10px;
-    width: 80vw;
+    grid-template-rows: 950px 500px 950px 500px 300px;
+    grid-gap: 50px;
+    width: 70vw;
 
   }
 
@@ -126,7 +132,7 @@
   }
 
   .navigation {
-    width: 80vw;
+    width: 70vw;
     grid-column: span 3;
     grid-row: 1/2;
     overflow: hidden;
@@ -240,6 +246,22 @@
 
   .more2 {
     background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  }
+
+  /* Blog Styles */
+
+  .blog {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+
+  .articles {
+    grid-column: 1/3;
+  }
+
+  .music {
+    grid-column: 3/-1;
   }
 
   /* Contact Styles */
