--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,13 @@
 
     </div>
     <div class="blog">
-      <div class="articles"></div>
+      <div class="articles">
+
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It</a>
+        <br>
+        <p>By Jason Yuan</p>
+
+      </div>
       <div class="music">
         <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" float="right" width="378" height="500" frameborder="0"
           allowtransparency="true" allow="encrypted-media">Selectore</iframe>
@@ -225,7 +231,7 @@
   .templates {
     grid-column: 4/-1;
     grid-row: 2/4;
-
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
   }
 
   .more {
