more sample articles

--- a/Index.html
+++ b/Index.html
@@ -69,9 +69,34 @@
     <div class="blog">
       <div class="articles">
 
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It</a>
-        <br>
-        <p>By Jason Yuan</p>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
+          <br>
+          <p class="authors">By Jason Yuan</p>
+        </a>
+
+
+
+        <a href=""></a>
 
       </div>
       <div class="music">
