--- a/Index.html
+++ b/Index.html
@@ -94,10 +94,6 @@
           <p class="authors">By Jason Yuan</p>
         </a>
 
-
-
-        <a href=""></a>
-
       </div>
       <div class="music">
         <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" float="right" width="378" height="500" frameborder="0"
@@ -175,8 +171,6 @@
   .nav {
     font-size: 25px;
     margin: 10px;
-    text-decoration: none;
-    color: rgb(180, 174, 106);
     float: right;
 
   }
@@ -289,11 +283,24 @@
 
   .articles {
     grid-column: 1/3;
+
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(180, 174, 106);
+    margin: 0 0 30px 0;
+  }
+
+  .authors {
+    color: whitesmoke;
+    margin: 0;
   }
 
   .music {
     grid-column: 3/-1;
   }
+
 
   /* Contact Styles */
 
