--- a/Index.html
+++ b/Index.html
@@ -94,6 +94,10 @@
           <p class="authors">By Jason Yuan</p>
         </a>
 
+        <a rel="stylesheet" href="https://medium.com/@piusandru">More
+          <i class="fas fa-arrow-right"></i>
+        </a>
+
       </div>
       <div class="music">
         <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" float="right" width="378" height="500" frameborder="0"
@@ -292,12 +296,12 @@
   a {
     text-decoration: none;
     color: rgb(180, 174, 106);
-    margin: 0 0 30px 0;
+
   }
 
   .authors {
     color: whitesmoke;
-    margin: 0;
+    margin-top: 0;
   }
 
   .music {
