--- a/Index.html
+++ b/Index.html
@@ -11,126 +11,23 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
-
 </head>
 
 <body>
   <div class="wrapper">
-    <div class=" header box">
-      <div class="navigation">
+    <div class="nav">
+      <div class="cont">
         <img class="head_img" src="images/avatar.jpeg" width="50px" height="50px">
-        <a class="nav" href="#about">About</a>
-        <a class="nav" href="#work">Work</a>
-        <a class="nav" href="#contact">Contact</a>
-      </div>
-      <div class="intro">
-
-        <h1>Hi,
-          <br>I'm Adam,
-          <br>Web Developer.</h1>
-
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
-    <div class=" about box">
-      <a name="about"></a>
-      <div class="me">
-        <h2>About Me</h2>
-        <p>I am Adam Mulorem (just call me Adam), Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem eum iste
-          sequi animi sit facilis commodi dolores, deleniti nihil. Voluptates, ipsum accusamus? Id error eius.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente animi suscipit unde ut assumenda asperiores, ipsa
-          id non inventore aperiam, minima, itaque doloremque vel veritatis illo quidem expedita odio? Blanditiis. Lorem
-          ipsum dolor sit amet consectetur. </p>
-
-      </div>
-      <div class="skills">
-        <h2>What I do</h2>
-        <ul>
-          <li>HTML5</li>
-          <li>CSS3</li>
-        </ul>
-      </div>
-      <div class="other">
-        <h2>More Jazz</h2>
-      </div>
+    <div class="work"></div>
+    <div class="credits">
+      <i class="far fa-copyright fa-spin"></i>Designed By Adam 2018
     </div>
-    <div class=" work box">
-      <div class=" trex indulge"></div>
-      <div class=" trex project2"></div>
-      <div class=" trex project3"></div>
-      <div class=" trex templates">
 
-      </div>
-      <div class=" trex more"></div>
-      <div class=" trex more1"></div>
-      <div class=" trex more2"></div>
-
-    </div>
-    <div class="blog">
-      <div class="articles">
-
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-        <a href="https://medium.com/p/b7e2e4dc64bf?source=user_profile---------1-------------------">I Got Rejected by Apple Music… So I Redesigned It
-          <br>
-          <p class="authors">By Jason Yuan</p>
-        </a>
-
-        <a rel="stylesheet" href="https://medium.com/@piusandru">More
-          <i class="fas fa-arrow-right"></i>
-        </a>
-
-      </div>
-      <div class="music">
-        <iframe src="https://open.spotify.com/embed/album/4VFG1DOuTeDMBjBLZT7hCK" float="right" width="350" height="500" frameborder="0"
-          allowtransparency="true" allow="encrypted-media">Selectore</iframe>
-      </div>
-    </div>
-    <div class="contact box">
-      <a name="contact"></a>
-
-      <div class="details">
-        <img src="images/avatar.jpeg" alt="" width="150px" height="150px">
-        <h2>Contact Me</h2>
-        <ul>
-          <li>Phone: +1-000-0000000</li>
-          <li>E-mail: loremipsum@ipsum.com</li>
-        </ul>
-
-        <h3>Check out more projects on
-          <a class="git" href="https://github.com/AMutaa">Github</a>
-        </h3>
-      </div>
-
-      <div class="quote">
-        <h3 class="quo">"The learning process continues until the day you die."
-          <br>
-          <i>Kirk Douglas.</i>
-        </h3>
-      </div>
-
-      <div class="credits">
-        <i class="far fa-copyright fa-spin"></i>Designed By Adam 2018</div>
-
-    </div>
   </div>
 
 </body>
