--- a/Index.html
+++ b/Index.html
@@ -6,30 +6,108 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="normalise.css">
-  <link rel="stylesheet" href="index.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/normalise.css">
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300 " rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="nav">
+    <div class=" section nav">
       <div class="cont">
-        <img class="head_img" src="images/avatar.jpeg" width="50px" height="50px">
-        <a href="#about">About</a>
-        <a href="#work">Work</a>
-        <a href="#contact">Contact</a>
+        <a class="trex" href="about.html">About</a>
+        <a class="trex" href="contact.html">Contact</a>
       </div>
     </div>
-    <div class="work"></div>
-    <div class="credits">
-      <i class="far fa-copyright fa-spin"></i>Designed By Adam 2018
+    <div class=" section bac heading">
+      <div class="cont">
+        <h1>Adam
+          <br> Frontend Developer, Designer
+          <br> Boston, Massachusetts
+        </h1>
+      </div>
     </div>
 
-  </div>
 
+    <div class=" section cont projects">
+      <div class="res">
+        <div>
+          <img src="assets/images/tube.png" alt="" class="thumb">
+        </div>
+        <div class="reh">
+          <h3>My YouTube App</h3>
+          <h4>HTML, CSS, Javascript, Jquery, YouTube API</h4>
+          <p> I created a this YouTube App using the above tools.I used Javascript to deliver the video content while using the
+            YouTube API. This was one of my first projects working with API's.
+          </p>
+
+          <button>LEARN MORE</button>
+        </div>
+      </div>
+      <div class="res">
+        <div class="reh">
+          <h3>The Great RGB Game</h3>
+          <h4>HTML, CSS, Javascript</h4>
+          <p> I created a this color game using plain Javascript.Its not really that fun but you could give it a shot. This was
+            one of my first projects in Javascript.
+          </p>
+
+          <button>LEARN MORE</button>
+        </div>
+        <div>
+          <img src="assets/images/game.png" alt="" class="thumb">
+
+        </div>
+      </div>
+      <div class="res">
+
+        <div>
+          <img src="assets/images/page.png" class="thumb" alt="">
+        </div>
+        <div class="reh">
+          <h3>A Website Landing Page</h3>
+          <h4>HTML, CSS, Responsive Web Design</h4>
+          <p> I created a this landing page for a restaurant website using plain HTML and CSS. Responsive web design was used
+            to deliver the same content to different devices, regardless of the display size or capabilities. This was one
+            of my first projects in Web Development .
+          </p>
+
+          <button>LEARN MORE</button>
+        </div>
+      </div>
+      <div class="soc">
+        <div class=" fic git">
+          <a href="https://github.com/AMutaa" class="fab fa-github fa-4x">
+            <br>
+            <p class="tiy">Git Repos</p>
+          </a>
+        </div>
+        <div class=" fic codepen">
+          <a href="https://codepen.io/amutaa/" class="fab fa-codepen fa-4x">
+            <p class="tiy">Codepens</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class=" section bac footer">
+      <div class="cont">
+        <div>
+          <img class="head_img" src="assets/images/avatar.jpeg" width="50px" height="50px">
+        </div>
+        <div class="tre">
+          <a class="foot" href="about.html">About</a>
+          <a class="foot" href="contact.html">Contact</a>
+        </div>
+        <div>
+          <i class="far fa-copyright fa-spin"></i>Designed By Adam 2018
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="assets/js/index.js"></script>
 </body>
 
 </html>
